objects/Timeline_Display__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Personalization settings for the behavior and display of the Timeline</description>
    <fields>
        <fullName>Auto_Center_Recent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, automatically center the timeline on the most recent (past) event. When unchecked, center the timeline at the current date/time.</description>
        <inlineHelpText>When checked, automatically center the timeline on the most recent (past) event. When unchecked, center the timeline at the current date/time.</inlineHelpText>
        <label>Auto Center on Most Recent Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Zoom__c</fullName>
        <defaultValue>7</defaultValue>
        <description>The initial zoom level when the timeline first opens, from 0 (hours) to 9 (years). Default is 7.</description>
        <inlineHelpText>The initial zoom level when the timeline first opens, from 0 (hours) to 9 (years). Default is 7.</inlineHelpText>
        <label>Initial Zoom Level (0-9)</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scrolling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the mouse wheel and/or trackpad gestures should scroll the timeline horizontally when the cursor is positioned over the timeline component (if not, it will scroll the outer page/container)</description>
        <inlineHelpText>Whether the mouse wheel and/or trackpad gestures should scroll the timeline horizontally when the cursor is positioned over the timeline component (if not, it will scroll the outer page/container)</inlineHelpText>
        <label>Mouse Wheel/Trackpad Scrolling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <defaultValue>&quot;subtab&quot;</defaultValue>
        <description>When viewing the Timeline in a standard (non-console) view, the HTML browser target window to use for opening links (can use a named window or standard values like &quot;_blank&quot;, &quot;_parent&quot;, &quot;_top&quot;, etc).</description>
        <inlineHelpText>When viewing the Timeline in a standard (non-console) view, the HTML browser target window to use for opening links (can use a named window or standard values like &quot;_blank&quot;, &quot;_parent&quot;, &quot;_top&quot;, etc).</inlineHelpText>
        <label>Link Target</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoom_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When clicking the Zoom buttons, whether to zoom based on left edge of timeline (unchecked) or the center of the timeline (checked)</description>
        <inlineHelpText>When clicking the Zoom buttons, whether to zoom based on left edge of timeline (unchecked) or the center of the timeline (checked)</inlineHelpText>
        <label>Zoom from Center</label>
        <type>Checkbox</type>
    </fields>
    <label>Timeline Display Preferences</label>
</CustomObject>